tests/shouldFail/j021b.c
int main(void) {
	unsigned char uc;
	// return uc + 1 >= 0;
	uc;
	return 0;
}
